src/test/deca/context/invalid/SansObjet/DeclVar-Mod-float-float-int.deca
// Description:
//    Declaration of a float variable using % operation between a float variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  3.14; 
    int y = 2; 
    float z = 3.14 % 2; 
}
